added: id for skills as primary key
